argocd/apps/media/radarr/manifests/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  labels:
    dns.homelabtech.net/provider: externaldns
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
  hostnames:
    - "radarr.carsonanderson.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: radarr
          port: 7878
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
